--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,122 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@keyframes showup {
+  0% {
+    opacity: 0;
+  }
+
+  20% {
+    opacity: 1;
+  }
+
+  80% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes slidein {
+  0% {
+    margin-left: -800px;
+  }
+
+  20% {
+    margin-left: -800px;
+  }
+
+  35% {
+    margin-left: 0px;
+  }
+
+  100% {
+    margin-left: 0px;
+  }
+}
+
+@keyframes reveal {
+  0% {
+    opacity: 0;
+    width: 0px;
+  }
+
+  20% {
+    opacity: 1;
+    width: 0px;
+  }
+
+  30% {
+    width: 355px;
+  }
+
+  80% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+    width: 355px;
+  }
+}
+
+@keyframes colorChange {
+  0% {
+    color: grey;
+    transform: scale(1);
+  }
+
+  50% {
+    color: white;
+    transform: scale(1);
+  }
+
+  100% {
+    color: #ff5722;
+    transform: scale(1.1);
+
+  }
+}
+
+.blink {
+  animation: colorChange 3s infinite;
+}
+
+@keyframes fadeInFromRight {
+  0% {
+    opacity: 0;
+    transform: translateX(100px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+.fade-in-right {
+  animation: fadeInFromRight 3s ease-out;
+}
+
+@keyframes fadeInFromDown {
+  0% {
+    opacity: 0;
+    transform: translateY(-50px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.fade-in-down {
+  animation: fadeInFromDown 2s ease-out;
+}
+
 @import '@fontsource/nunito';
 @import '@fontsource/inter';
 @import "@fontsource/el-messiri";
